--- a/package.json
+++ b/package.json
@@ -1,47 +1,30 @@
 {
-  "name": "uniguide-cms",
-  "version": "1.0.0",
-  "description": "מערכת ניהול תוכן עבור המדריך המלא למובילי ומנהלי מרכזי יזמות - יוניסטרים",
+  "name": "uniguide-editor",
+  "version": "2.0.0",
+  "description": "Professional content editor powered by Netlify Functions",
   "main": "index.js",
   "scripts": {
     "dev": "netlify dev",
-    "build": "node build-site.js",
-    "deploy": "netlify deploy --prod",
-    "test": "node test-functions.js",
-    "start": "netlify dev --port 8888",
-    "setup": "node setup.js",
-    "publish": "node publish.js",
-    "publish:auto": "node publish.js --auto",
-    "publish:quick": "node publish.js --quick",
-    "update": "node publish.js --auto"
+    "build": "netlify build",
+    "start": "start pro-editor.html",
+    "editor": "start pro-editor.html",
+    "simple": "start simple-editor.html",
+    "old": "start secure-editor.html"
   },
   "keywords": [
-    "cms",
-    "content-management",
-    "education",
-    "entrepreneurship",
-    "hebrew",
-    "netlify"
+    "editor",
+    "netlify",
+    "serverless",
+    "github",
+    "cms"
   ],
-  "author": "יוניסטרים",
+  "author": "UNIGuide Team",
   "license": "MIT",
-  "dependencies": {
-    "sharp": "^0.32.6",
+  "devDependencies": {
+    "@netlify/functions": "^2.0.0",
     "netlify-cli": "^17.0.0"
   },
-  "devDependencies": {
-    "@netlify/functions": "^2.4.0",
-    "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/unistream/uniguide"
-  },
-  "bugs": {
-    "url": "https://github.com/unistream/uniguide/issues"
-  },
-  "homepage": "https://uniguide.netlify.app"
+  "dependencies": {
+    "@types/node": "^18.0.0"
+  }
 }
